--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.4.2",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "ngx-alerts": "^10.0.0",
     "ngx-cookie-service": "^3.0.4",
     "ngx-pagination": "^5.0.0",
     "ngx-spinner": "^10.0.1",
